--- a/abc blog 2/index.html
+++ b/abc blog 2/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed">
-    <link rel="stylesheet" href="assets/css/SO-floating-nav_15.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
