--- a/abc blog 2/index.html
+++ b/abc blog 2/index.html
@@ -89,6 +89,7 @@
                 </div>
           </div>
         </div>
+    </div>
     
     <ol class="breadcrumb" style="font-size: 16px;height: 80px;">
         <li class="breadcrumb-item"><a href="#"><span>Home</span></a></li>
