--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -103,6 +103,8 @@
     </ol>
     <div>
 
+
+
       <section id="about" class="py-5">
 
            <!-- Container -->
@@ -113,7 +115,7 @@
                <p class="lead grey-text text-center w-responsive mx-auto mb-5">I'm an aspiring Biotechnologist, blogger and a perpetual starter of new hobbies.</p>
 
                <!-- Grid row -->
-               <div class="row">
+               <div class="row" style="margin:auto;">
 
                    <!-- Grid column -->
                    <div class="col-lg-4 text-center text-lg-left">
@@ -122,19 +124,15 @@
                    <!-- Grid column -->
 
                    <!-- Grid column -->
-                   <div class="col-lg-7">
+                   <div class="col-lg-7" style="height=90%">
 
                        <!-- Grid row -->
                        <div class="row mb-3">
 
                            <!-- Grid column -->
-                           <div class="col-1">
-                               <a class="fa fa-github fa-lg purple-text" href="#" target="_blank"></a>
-                           </div>
-                           <!-- Grid column -->
 
                            <!-- Grid column -->
-                           <div class="col-xl-10 col-md-11 col-10">
+                           <div class="col-12">
 
                                <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
                                    minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
@@ -149,17 +147,15 @@
                        <div class="row mb-3">
 
                            <!-- Grid column -->
-                           <div class="col-1">
-                               <a class="fa fa-instagram fa-lg purple-text" href="#" target="_blank"></a>
-                           </div>
+
                            <!-- Grid column -->
 
                            <!-- Grid column -->
-                           <div class="col-xl-10 col-md-11 col-10">
+                           <div class="col-12">
 
                                <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
                                    minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
-                               assumenda deleniti hic.</p>
+                               assumenda deleniti hic.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                            </div>
                            <!-- Grid column -->
 
@@ -169,20 +165,39 @@
                        <!--Grid row-->
                        <div class="row">
 
-                           <!-- Grid column -->
-                           <div class="col-1">
-                               <a class="fa fa-linkedin fa-lg purple-text" href="#" target="_blank"></a>
-                           </div>
+
                            <!-- Grid column -->
 
                            <!-- Grid column -->
-                           <div class="col-xl-10 col-md-11 col-10">
+                           <div class="col-12">
 
                                <p class="grey-text mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim
                                    ad minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
                                assumenda deleniti hic.</p>
                            </div>
                            <!-- Grid column -->
+
+                       </div>
+                       <!--Grid row-->
+                       <br><br>
+                       <div class="row">
+                         <div class="col-4">
+                               <h5> Follow Me on </h5>
+                         </div>
+
+                           <!-- Grid column -->
+                           <div class="col-2">
+                               <a class="fa fa-github fa-lg purple-text" href="#" target="_blank"></a>
+                           </div>
+                           <div class="col-2">
+                               <a class="fa fa-linkedin fa-lg purple-text" href="#" target="_blank"></a>
+                           </div>
+                           <div class="col-2">
+                               <a class="fa fa-instagram fa-lg purple-text" href="#" target="_blank"></a>
+                           </div>
+                           <div class="col-2">
+                               <a class="fa fa-envelope fa-lg purple-text" href="#" target="_blank"></a>
+                           </div>
 
                        </div>
                        <!--Grid row-->
@@ -199,10 +214,11 @@
        </section>
        <!--Section: about-->
 
+       <hr>
 
         <!-- Articles -->
      <div class="art" id="parallax">
-       <h4 class="h1-responsive font-weight-bold text-center mb-5">Featured Articles </h4>
+       <h2 class="h1-responsive font-weight-bold text-center mb-5">Featured Articles </h2>
        <div class="container" id="articles">
          <img src="assets/img/123.png" class="img-thumbnail float-left mr-2 ml-md-5 ml-3" width="200px" height="200px">
          <p><small>23 June 2020</small>
@@ -210,7 +226,7 @@
          <br><small><strong><a href="#" target="_blank">Prerana B </a> · 7 min read</strong></small><p></p>
        </div>
      </div>
-     <div class="art mt-5">
+     <div class="art mt-5" href="#">
        <div class="container" id="articles">
          <img src="assets/img/123.png" class="img-thumbnail float-left mr-2 mb-3 ml-md-5 ml-3" width="200px" height="200px">
          <p><small>23 June 2020</small>
