--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -118,7 +118,7 @@
                <div class="row" style="margin:auto;">
 
                    <!-- Grid column -->
-                   <div class="col-lg-4 text-center text-lg-left">
+                   <div class="col-lg-4 text-center text-lg-left" style="height:400px">
                        <img class="img-fluid" src="assets/img/pic.jpeg" alt="Sample image" style="height:90%;">
                    </div>
                    <!-- Grid column -->
