--- a/home abc/index.html
+++ b/home abc/index.html
@@ -100,6 +100,16 @@
         <a
             class="btn btn-primary btn-dark" role="button" style="color: #f8c146;font-size: 0.7em;">Health care</a>
     </section>
+    <section class="text-center" style="margin-left: auto;margin-right: auto;">
+        <div class="row text-center text-center">
+            <div class="col-md-12 offset-md-3 padMar">
+                <div class="input-group">
+                    <div class="input-group-prepend"></div><input class="form-control autocomplete" type="text" placeholder="What shall I learn today ?" style="margin-left: 10px;margin-top: 10px;">
+                    <div class="input-group-append"><button class="btn btn-warning" type="button"><i class="fa fa-search"></i></button></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section><div class="blog-home3 py-5">
   <div class="container">
     <!-- Row  -->
