--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-    <ol class="breadcrumb" style="height: 50px;">
+    <ol class="breadcrumb" style="height: 60px;">
         <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Home</span></a></li>
         <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Authors</span></a></li>
         <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Prerana</span></a></li>
@@ -207,7 +207,7 @@
 
        <hr></div>
         <section class="text-left" style="margin-top: 50px;">
-            <h1 class="text-center"><strong>&nbsp; &nbsp;Featured posts</strong></h1>
+            <h1 class="text-center"><strong>&nbsp; &nbsp;Featured posts</strong></h1><br>
             <div class="container" id="full-box" style="margin: 10px;width: 100%;">
                 <div class="row" id="box-shadow" style="margin-top: 10px;width: 100%;">
                     <div class="col-4 col-md-4 col-lg-4 col-xl-3 offset-md-0 offset-lg-1 offset-xl-3" style="width: 100px;height: 120px;"><img class="rounded float-left" src="assets/img/123.png" style="width: 100%;height: 100%;margin-left: 0;margin-top: 0;margin-bottom: auto;"></div>
