--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -209,7 +209,7 @@
         <section class="text-left" style="margin-top: 50px;">
             <h1 class="text-center"><strong>&nbsp; &nbsp;Featured posts</strong></h1><br>
             <div class="container" id="full-box" style="margin: 10px;width: 100%;">
-                <div class="row" id="box-shadow" style="margin-top: 10px;width: 100%;">
+                <div class="row" style="margin-top: 10px;width: 100%;">
                     <div class="col-4 col-md-4 col-lg-4 col-xl-3 offset-md-0 offset-lg-1 offset-xl-3" style="width: 100px;height: 120px;"><img class="rounded float-left" src="assets/img/123.png" style="width: 100%;height: 100%;margin-left: 0;margin-top: 0;margin-bottom: auto;"></div>
                     <div class="col-8 col-md-8 col-lg-7 col-xl-6">
                         <p class="text-left" id="news-name" style="font-size: 25px;color: #01001c;"><a href="#"><strong>Top Technology Bloggers in India</strong></a></p>
