--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -125,7 +125,7 @@
                            <!-- Grid column -->
                            <div class="col-12">
 
-                               <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
+                               <p class="grey-text justify-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
                                    minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
                                assumenda deleniti hic.</p>
                            </div>
@@ -144,7 +144,7 @@
                            <!-- Grid column -->
                            <div class="col-12">
 
-                               <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
+                               <p class="grey-text justify-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
                                    minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
                                assumenda deleniti hic.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                            </div>
@@ -162,7 +162,7 @@
                            <!-- Grid column -->
                            <div class="col-12">
 
-                               <p class="grey-text mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim
+                               <p class="grey-text mb-0 justify-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim
                                    ad minima veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam
                                assumenda deleniti hic.</p>
                            </div>
