--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -88,13 +88,13 @@
                 </div>
           </div>
         </div>
-
-    <ol class="breadcrumb" style="height: 60px;">
-        <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Home</span></a></li>
-        <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Authors</span></a></li>
-        <li class="breadcrumb-item"><a href="#"><span style="color: rgb(0,0,0);">Prerana</span></a></li>
-    </ol>
     <div>
+        
+         <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#"><span class="text-dark">Home</span></a></li>
+      <li class="breadcrumb-item"><a href="#"><span class="text-dark">Ones to Watch</span></a></li>
+    </ol>
+        
         <div class="container" id="parallax">
       <section id="about" class="py-5">
 
