--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -91,9 +91,9 @@
     <div>
         
          <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#" style:"margin:0px"><span class="text-dark">Home</span></a></li>
-      <li class="breadcrumb-item"><a href="#" style:"margin:0px"><span class="text-dark">Author</span></a></li>
-      <li class="breadcrumb-item"><a href="#" style:"margin:0px"><span class="text-dark">Prerana Balasubramanian</span></a></li>
+      <li class="breadcrumb-item"><a href="#"><span class="text-dark">Home</span></a></li>
+      <li class="breadcrumb-item"><a href="#"><span class="text-dark">Author</span></a></li>
+      <li class="breadcrumb-item"><a href="#"><span class="text-dark">Prerana Balasubramanian</span></a></li>
     </ol>
         
         <div class="container" id="parallax">
