--- a/abc blog 3/index.html
+++ b/abc blog 3/index.html
@@ -281,10 +281,10 @@
             
             <div class="col-12 col-sm-6 align-self-center ">
                 <div class="text-center"> 
-                    <a class="btn btn-social-icon btn-google" href="https://www.instagram.com/alphabiocell/?hl=en"><i class="fa fa-instagram fa-lg"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="https://www.facebook.com/pages/category/College---University/Alpha-Bio-Cell-2837739956251320/"><i class="fa fa-facebook fa-lg"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="https://www.linkedin.com/company/alpha-bio-cell"><i class="fa fa-linkedin fa-lg"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="mailto:alphabiocell@gmail.com"><i class="fa fa-envelope fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-google mr-2" href="https://www.instagram.com/alphabiocell/?hl=en"><i class="fa fa-instagram fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-google mr-2" href="https://www.facebook.com/pages/category/College---University/Alpha-Bio-Cell-2837739956251320/"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-google mr-2" href="https://www.linkedin.com/company/alpha-bio-cell"><i class="fa fa-linkedin fa-lg"></i></a>
+                    
                 </div>
             </div>
        </div>
